<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lib"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="134dp"
        android:background="#D23F51B5"
        android:text="@string/login"
        android:textColor="#F1F6F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guest"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="134dp"
        android:background="#D23F51B5"
        android:text="@string/sign_up"
        android:textColor="#F1F6F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guest" />

    <Button
        android:id="@+id/guest"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="132dp"
        android:background="#D23F51B5"
        android:text="@string/guest"
        android:textColor="#EDEDED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="408dp"
        android:layout_height="103dp"
        android:layout_marginBottom="446dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ar" />

</androidx.constraintlayout.widget.ConstraintLayout>