<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lib"
    tools:context=".cp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:background="#D23F51B5"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#F1F6F0"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_structures_algorithms_in_java"
            android:background="#D23F51B5"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#F1F6F0"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/handbook_of_data_structures_and_applications"
            android:background="#D23F51B5"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#F1F6F0"/>
    </LinearLayout>
</RelativeLayout>