<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:background="@drawable/lib"
    android:layout_height="match_parent"
    tools:context=".signup">

    <TextView
        android:id="@+id/signup"
        android:layout_width="411dp"
        android:layout_height="81dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="110dp"
        android:background="#D23F51B5"
        android:textColor="#F1F6F0"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/s_editTextTextEmailAddress"
        android:layout_width="402dp"
        android:layout_height="55dp"
        android:layout_marginTop="337dp"
        android:layout_marginBottom="9dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#F30606"
        app:layout_constraintBottom_toTopOf="@+id/s_editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        tools:ignore="UnknownIdInLayout" />

    <EditText
        android:id="@+id/s_editTextTextPassword"
        android:layout_width="405dp"
        android:layout_height="52dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="43dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#C80B0B"
        app:layout_constraintBottom_toTopOf="@+id/signupdone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_editTextTextEmailAddress"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UnknownIdInLayout" />

    <Button
        android:id="@+id/signupdone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="60dp"
        android:background="#D23F51B5"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:textColor="#F1F6F0"
        tools:ignore="UnknownIdInLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>